hphp/test/slow/sealed/sealed_classes9.php.expectf
Fatal error: Values in sealed whitelist must be classname constants. in %s/test/slow/sealed/sealed_classes9.php on line 9
